--- a/17. Product Landing Page 💠/style.css
+++ b/17. Product Landing Page 💠/style.css
@@ -3,16 +3,16 @@
    =======================*/
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 :root {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 body {
-    background-color: #f1f1f1;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f1f1f1;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* ======================= 
@@ -20,30 +20,30 @@ body {
    =======================*/
 
 #header-img {
-    width: max(60px,18vw);
-    display: block;
+  width: max(60px, 18vw);
+  display: block;
 }
 #header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem 5rem;
-    position: sticky;
-    top: 0;
-    background-color: #f1f1f1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 5rem;
+  position: sticky;
+  top: 0;
+  background-color: #f1f1f1;
 }
 #nav-bar > ul {
-    width: 35vw;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
+  width: 35vw;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style: none;
 }
 #nav-bar > ul > li > a {
-    text-decoration: none;
-    color: #000;
-    font-size: min(5vw, 1.7em);
-    text-transform: capitalize;
+  text-decoration: none;
+  color: #000;
+  font-size: min(5vw, 1.7em);
+  text-transform: capitalize;
 }
 
 /* ======================= 
@@ -51,179 +51,223 @@ body {
    =======================*/
 
 form {
- padding: 1rem 2rem;
+  padding: 1rem 2rem;
 }
 fieldset {
-    border: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-input , legend {
-    display: block;
-    margin-top: 1.5rem;
+input,
+legend {
+  display: block;
+  margin-top: 1.5rem;
 }
 legend {
-    font-size: 2.5rem;
-    text-transform: capitalize;
-    font-weight: 500;
-    text-align: center;
-    margin-bottom: 0.5rem;  
+  font-size: 2.5rem;
+  text-transform: capitalize;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 0.5rem;
 }
-input[type='email'] {
-    width: 100%;
-    max-width: 300px;
-    padding: 0.6rem 0;
+input[type="email"] {
+  width: 100%;
+  max-width: 300px;
+  padding: 0.6rem 0;
 }
-input[type='email']:focus {
-    outline-color: #f1c40f;
+input[type="email"]:focus {
+  outline-color: #f1c40f;
 }
-input[type='submit'] {
-    font-size: 1.8rem;
-    font-weight: 600;
-    color: #303030;
-    padding: 0.6rem 2.8rem;
-    width: 100%;
-    max-width: 150px;
-    text-align: center;
-    text-transform: capitalize;
-    background-color: #f1c40f;
-    border: none;
-    border-radius: 2px;
-    transition: all 0.4s ease;
+input[type="submit"] {
+  font-size: 1.8rem;
+  font-weight: 600;
+  color: #303030;
+  padding: 0.6rem 2.8rem;
+  width: 100%;
+  max-width: 150px;
+  text-align: center;
+  text-transform: capitalize;
+  background-color: #f1c40f;
+  border: none;
+  border-radius: 2px;
+  transition: all 0.4s ease;
 }
-input[type='submit']:hover {
-    background-color: orange;
-    cursor: pointer;
+input[type="submit"]:hover,
+.block button:hover {
+  background-color: orange;
+  cursor: pointer;
 }
 .features {
-    margin: 5rem 0;
-    padding: 2rem;
-    width: 100%;
-    display: grid;
-    justify-content: center;
+  margin: 5rem 0;
+  padding: 2rem;
+  width: 100%;
+  display: grid;
+  justify-content: center;
 }
 .flex-wrapper {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    max-width: 885px;
-    gap: 6rem;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  max-width: 885px;
+  gap: 6rem;
 }
 .icons {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 5rem;
-    color: orange;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 5rem;
+  color: orange;
 }
 .icons + div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: 5rem;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 5rem;
+  height: 100%;
 }
 .icons + div h2 {
-    font-size: 2.5rem;
-    font-weight: 500;
+  font-size: 2.5rem;
+  font-weight: 500;
 }
 .icons + div p {
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: #525252;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #525252;
 }
 
 iframe {
-    margin: 0 auto;
-    display: block;
-    padding: 1.5rem 1rem;
-    width: 100%;
-    max-width: 600px;
+  margin: 0 auto;
+  display: block;
+  padding: 1.5rem 1rem;
+  width: 100%;
+  max-width: 600px;
 }
 
+/* ========================
+     Pricing Styling
+   ========================*/
+
+.pricing {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin: 4rem 0;
+  padding: 1.5rem 0;
+}
+.block {
+  border: 1px solid;
+  border-radius: 2px;
+  text-align: center;
+  width: 100%;
+  max-width: 310px;
+}
+.block h2 {
+  text-transform: uppercase;
+  background-color: rgb(222, 221, 221);
+  font-weight: 500;
+  font-size: 1.7rem;
+  padding: 1.5rem 0;
+}
+.block h2 + p {
+  font-size: 2.4rem;
+  font-weight: 500;
+  padding: 1.8rem 0;
+}
+.block p:not(.price) {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+}
+.block button {
+  margin: 2rem 0 1.4rem 0;
+  font-size: 2rem;
+  text-transform: capitalize;
+  padding: 0.8rem 2rem;
+  background-color: #f1c40f;
+  border: none;
+  border-radius: 2px;
+  transition: all 0.4s ease;
+}
+
+/* ========================
+     Footer  Styling
+   ========================*/
 
 
 
-
-
-
-
-
-
-
+   
 /* ========================
      Responsive Styling
    ========================*/
 
-@media (max-width: 1000px){
-    #nav-bar > ul > li > a {
-        font-size: 1.6rem;
-    }
-    legend {
-        font-size: 2.3rem;
-    }
-    input[type='submit'] {
-        font-size: 1.6rem;
-    }
-    
-} 
-@media (max-width: 700px){
-    #nav-bar > ul > li > a {
-        font-size: 1.4rem;
-    }
-    legend {
-        font-size: 2rem;
-    }
-    input[type='submit'] {
-        font-size: 1.5rem;
-    }
-    
+@media (max-width: 1000px) {
+  #nav-bar > ul > li > a {
+    font-size: 1.6rem;
+  }
+  legend {
+    font-size: 2.3rem;
+  }
+  input[type="submit"] {
+    font-size: 1.6rem;
+  }
 }
-@media (max-width: 650px){
-    #nav-bar > ul > li > a {
-        font-size: 1.2rem;
-    }
-    legend {
-        font-size: 1.8rem;
-    }
-    input[type='submit'] {
-        font-size: 1.3rem;
-        padding: 0.8rem 2.2rem;
-    }
+@media (max-width: 700px) {
+  #nav-bar > ul > li > a {
+    font-size: 1.4rem;
+  }
+  legend {
+    font-size: 2rem;
+  }
+  input[type="submit"] {
+    font-size: 1.5rem;
+  }
 }
-@media (max-width: 500px){
-    #nav-bar > ul > li > a {
-        font-size: 1rem;
-    }
-    legend {
-        font-size: 1.6rem;
-    }
-    input[type='submit'] {
-        font-size: 1.2rem;
-    }
+@media (max-width: 650px) {
+  #nav-bar > ul > li > a {
+    font-size: 1.2rem;
+  }
+  legend {
+    font-size: 1.8rem;
+  }
+  input[type="submit"] {
+    font-size: 1.3rem;
+    padding: 0.8rem 2.2rem;
+  }
 }
-@media (max-width: 410px){
-    #nav-bar > ul > li > a {
-        font-size: 0.7rem;
-    }
-    #nav-bar > ul {
-        gap: 1rem;
-    }
-    legend {
-        font-size: 1.5rem;
-    }
-    input[type='email'] {
-        width: 70%;
-    }
-    input[type='submit'] {
-        width: 40%;
-    }
-    #header {
-        padding: 2rem 2.5rem;
-    }
+@media (max-width: 500px) {
+  #nav-bar > ul > li > a {
+    font-size: 1rem;
+  }
+  legend {
+    font-size: 1.6rem;
+  }
+  input[type="submit"] {
+    font-size: 1.2rem;
+  }
+}
+@media (max-width: 410px) {
+  #nav-bar > ul > li > a {
+    font-size: 0.7rem;
+  }
+  #nav-bar > ul {
+    gap: 1rem;
+  }
+  legend {
+    font-size: 1.5rem;
+  }
+  input[type="email"] {
+    width: 70%;
+  }
+  input[type="submit"] {
+    width: 40%;
+  }
+  #header {
+    padding: 2rem 2.5rem;
+  }
 }
