--- a/17. Product Landing Page 💠/style.css
+++ b/17. Product Landing Page 💠/style.css
@@ -13,6 +13,7 @@
 body {
   background-color: #f1f1f1;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  scroll-behavior: smooth;
 }
 
 /* ======================= 
@@ -82,9 +83,7 @@ input[type="email"]:focus {
 }
 input[type="submit"] {
   font-size: 1.8rem;
-  font-weight: 600;
-  color: #303030;
-  padding: 0.6rem 2.8rem;
+  padding: 0.8rem 2.8rem;
   width: 100%;
   max-width: 150px;
   text-align: center;
@@ -149,7 +148,7 @@ iframe {
 }
 
 /* ========================
-     Pricing Styling
+     Price Styling
    ========================*/
 
 .pricing {
@@ -198,10 +197,30 @@ iframe {
 /* ========================
      Footer  Styling
    ========================*/
+footer {
+    text-align: right;
+    width: 100%;
+    padding: 2rem 0;
+    background-color: rgb(222, 221, 221);
+    text-transform: capitalize;
+    padding-right: 2rem;
+}
+
+footer ul {
+    display: flex;
+    gap: 2rem;
+    justify-content: flex-end;
+    list-style: none;
+    font-size: 1.6rem;
+    padding-bottom: 0.5rem;
+}
+footer ul + p {
+   font-size: 1.4rem;
+   color: #525252;
+}
 
 
 
-   
 /* ========================
      Responsive Styling
    ========================*/
