--- a/20. Personal Portfolio 💠/style.css
+++ b/20. Personal Portfolio 💠/style.css
@@ -1,8 +1,130 @@
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@500&family=Comfortaa:wght@300;400&family=Inter:wght@300&family=Manrope:wght@300&family=Open+Sans:wght@500&family=Poppins:wght@300;400&family=Quicksand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@500&family=Comfortaa:wght@300;400&family=Inter:wght@300&family=Manrope:wght@300&family=Open+Sans:wght@500&family=Poppins:wght@300;400&family=Quicksand&family=Raleway&display=swap");
+
+/* =====================
+      GENERAL STYLING
+   =====================*/
+
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 :root {
-    font-size: 62.5%;
+  font-size: 62.5%;
+  --primary-red: #be3144;
+  --primary-white: #f0f0f0;
+  --primary-black: #000;
+  --primary-blue: #45567d;
+}
+body {
+    font-family: "Poppins", sans-serif;
+}
+
+/* =====================
+      NAVBAR STYLING
+   =====================*/
+
+#navbar {
+ position: fixed;
+ top: 0;
+  background-color: var(--primary-red);
+  height: 9.4vh;
+  width: 100vw;
+}
+#navbar ul {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  padding-right: 3rem;
+  height: 100%;
+}
+li {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 2.4rem;
+  transition: all 0.3s ease-in-out;
+}
+li:hover {
+  cursor: pointer;
+  background-color: var(--primary-black);
+}
+#navbar ul a {
+  text-decoration: none;
+  font-size: 2.1rem;
+  text-transform: capitalize;
+  color: var(--primary-white);
+}
+
+@media (max-width: 1000px) {
+  #navbar ul a {
+    font-size: 1.8rem;
+  }
+  #navbar ul {
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 700px) {
+  #navbar ul a {
+    font-size: 1.6rem;
+  }
+  #navbar ul {
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 600px) {
+  #navbar ul a {
+    font-size: 1.4rem;
+  }
+  #navbar ul {
+    padding-right: 1.5rem;
+  }
+}
+@media (max-width: 500px) {
+  #navbar ul a {
+    font-size: 1.2rem;
+  }
+  #navbar ul {
+    padding-right: 1rem;
+  }
+}
+@media (max-width: 400px) {
+  #navbar ul a {
+    font-size: 1rem;
+  }
+  #navbar ul {
+    padding-right: 0.5rem;
+  }
+}
+
+/* =============================
+      WELCOME SECTION STYLING
+   =============================*/
+
+#welcome-section {
+  height: 100vh;
+  background-color: var(--primary-black);
+}
+#welcome-section div:first-child {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+#welcome-section h1 {
+  font-size: 6rem;
+  font-family: "Raleway", sans-serif;
+  color: var(--primary-white);
+  font-weight: 900;
+}
+#welcome-section p {
+    font-weight: 200;
+    font-size: 3rem;
+    font-style: italic;
+    color: var(--primary-red);
 }
