--- a/20. Personal Portfolio 💠/style.css
+++ b/20. Personal Portfolio 💠/style.css
@@ -19,7 +19,7 @@
   --primary-gray: #303841;
 }
 body {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 /* =====================
@@ -27,8 +27,8 @@ body {
    =====================*/
 
 #navbar {
- position: fixed;
- top: 0;
+  position: fixed;
+  top: 0;
   background-color: var(--primary-red);
   height: 9.4vh;
   width: 100vw;
@@ -59,7 +59,6 @@ li:hover {
   color: var(--primary-white);
 }
 
-
 /* =============================
       WELCOME SECTION STYLING
    =============================*/
@@ -84,193 +83,251 @@ li:hover {
   font-weight: 900;
 }
 #welcome-section p {
-    font-weight: 200;
-    font-size: 3rem;
-    font-style: italic;
-    color: var(--primary-red);
+  font-weight: 200;
+  font-size: 3rem;
+  font-style: italic;
+  color: var(--primary-red);
 }
 
 /* =============================
       PROJECTS SECTION STYLING
    =============================*/
 #projects {
-    background-color: var(--primary-blue);
-    padding: 4rem 0 0.6rem 0;
+  background-color: var(--primary-blue);
+  padding: 4rem 0 0.6rem 0;
 }
 
 #projects h2 {
-    text-align: center;
-    font-size: 4rem;
-    color: var(--primary-white);
-    border-bottom: 2px solid var(--primary-white);
-    width: 100%;
-    max-width: 640px;
-    margin: 4rem auto 2rem auto;
+  text-align: center;
+  font-size: 4rem;
+  color: var(--primary-white);
+  border-bottom: 2px solid var(--primary-white);
+  width: 100%;
+  max-width: 640px;
+  margin: 4rem auto 2rem auto;
 }
 figure {
-    height: 100%;
-    border-bottom: 4px solid var(--primary-gray);
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  height: 100%;
+  border-bottom: 4px solid var(--primary-gray);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 #projects img {
-    width: 100%;
-    object-fit: cover;
-    height: 100%;
+  width: 100%;
+  object-fit: cover;
+  height: 100%;
 }
 figcaption {
-    text-align: center;
-    font-size: 2rem;
-    text-transform: capitalize;
-    color: var(--primary-white);
-    background-color: var(--primary-gray);
-    padding: 1.8rem 0;
-    border-radius: 0 0 0.5rem 0.5rem;
-    transition: all 0.3s ease-in-out;
+  text-align: center;
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: var(--primary-white);
+  background-color: var(--primary-gray);
+  padding: 1.8rem 0;
+  border-radius: 0 0 0.5rem 0.5rem;
+  transition: all 0.3s ease-in-out;
 }
-figcaption:hover{
-    color: var(--primary-red);
+figcaption:hover {
+  color: var(--primary-red);
 }
-figure a , #projects button a {
-    text-decoration: none;
-    list-style: none;
-    color: var(--primary-white);
+figure a,
+#projects button a,
+.social-links a {
+  text-decoration: none;
+  list-style: none;
+  color: var(--primary-white);
 }
 .projects-images {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-auto-rows: 400px;
-    grid-column-gap: 4rem;
-    grid-row-gap: 10.5rem;
-    padding: 3rem 12.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 400px;
+  grid-column-gap: 4rem;
+  grid-row-gap: 10.5rem;
+  padding: 3rem 12.5rem;
 }
 #projects button {
-    margin: 8rem auto;
-    display: block;
-    padding: 1rem 3.2rem;
-    padding-right: 3rem;
-    font-size: 2rem;
-    border-radius: 0.4rem;
-    border: none;
-    color: var(--primary-white);
-    background-color: var(--primary-gray);
-    transition: all 0.3s ease-in-out;
-    font-family: "Poppins", sans-serif;
+  margin: 8rem auto;
+  display: block;
+  padding: 1rem 3.2rem;
+  padding-right: 3rem;
+  font-size: 2rem;
+  border-radius: 0.4rem;
+  border: none;
+  color: var(--primary-white);
+  background-color: var(--primary-gray);
+  transition: all 0.3s ease-in-out;
+  font-family: "Poppins", sans-serif;
 }
 
 #projects button::after {
-    content: '>';
-    padding-left: 1.2rem;
+  content: ">";
+  padding-left: 1.2rem;
 }
 #projects button:hover {
-    cursor: pointer;
-    background-color: var(--primary-red);
+  cursor: pointer;
+  background-color: var(--primary-red);
 }
 
- /* ==========================
+/* =============================
+      CONTACT SECTION STYLING
+    =============================*/
+
+#contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--primary-gray);
+  text-align: center;
+  color: var(--primary-white);
+  height: 80vh;
+  padding: 0 2rem;
+}
+#contact h2 {
+  font-size: 6rem;
+  font-family: "Raleway", sans-serif;
+  padding-bottom: 0.5rem;
+}
+#contact h2 + p {
+  font-weight: 100;
+  font-size: 1.8rem;
+  font-style: italic;
+}
+.social-links {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 3.6rem;
+  padding-top: 4rem;
+  text-shadow: -6px -1px 5px rgba(0,0,0,0.28);
+}
+.social-links p {
+    font-size: 2.4rem;
+    text-shadow: #303841;
+    transform: translateY(0);
+    transition: all 0.3s ease-in-out;
+}
+.social-links p:hover {
+    transform: translateY(12%);
+}
+/* ==========================
         RESPONSIVE STYLING
     ==========================*/
-@media (max-width:1300px){
-        .projects-images {
-            grid-template-columns: repeat(2,1fr);
-        }
-        #projects h2 {
-            font-size: 3.5rem;
-            max-width: 600px;
-        }
+@media (max-width: 1300px) {
+  .projects-images {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  #projects h2 {
+    font-size: 3.5rem;
+    max-width: 600px;
+  }
+  #contact h2 {
+    font-size: 5rem;
+  }
 }
 @media (max-width: 1000px) {
-    #navbar ul a {
-      font-size: 1.8rem;
-    }
-    #navbar ul {
-      padding-right: 2.5rem;
-    }
-    #welcome-section h1 {
-        font-size: 5rem;
-      }
-      #welcome-section p {
-        font-size: 2.5rem;
-      }
-      .projects-images {
-        grid-template-columns: repeat(1,1fr);
-    }
-    #projects h2 {
-        font-size: 3rem;
-        max-width: 500px;
-    }
+  #navbar ul a {
+    font-size: 1.8rem;
   }
-  @media (max-width: 700px) {
-    #navbar ul a {
-      font-size: 1.6rem;
-    }
-    #navbar ul {
-      padding-right: 2rem;
-    }
-    #welcome-section h1 {
-        font-size: 4rem;
-      }
-      #welcome-section p {
-        font-size: 2.2rem;
-      }
-      #projects h2 {
-        font-size: 2.5rem;
-        max-width: 400px;
-    }
-    .projects-images {
-        width: 100%;
-    }
+  #navbar ul {
+    padding-right: 2.5rem;
   }
-  @media (max-width: 600px) {
-    #navbar ul a {
-      font-size: 1.4rem;
-    }
-    #navbar ul {
-      padding-right: 1.5rem;
-    }
-    #welcome-section h1 {
-        font-size: 4rem;
-      }
-      #welcome-section p {
-        font-size: 2rem;
-      }
-      #projects h2 {
-        font-size: 2rem;
-        max-width: 300px;
-    }
+  #welcome-section h1 {
+    font-size: 5rem;
   }
-  @media (max-width: 500px) {
-    #navbar ul a {
-      font-size: 1.2rem;
-    }
-    #navbar ul {
-      padding-right: 1rem;
-    }
-    #welcome-section h1 {
-        font-size: 3rem;
-      }
-      #welcome-section p {
-        font-size: 1.7rem;
-      }
-      #projects h2 {
-        font-size: 1.5rem;
-        max-width: 200px;
-    }
+  #welcome-section p {
+    font-size: 2.5rem;
   }
-  @media (max-width: 400px) {
-    #navbar ul a {
-      font-size: 1rem;
-    }
-    #navbar ul {
-      padding-right: 0.5rem;
-    }
-    #welcome-section h1 {
-        font-size: 2.5rem;
-      }
-      #welcome-section p {
-        font-size: 1.5rem;
-      }
-      #projects h2 {
-        font-size: 1.3rem;
-    }
+  .projects-images {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  #projects h2 {
+    font-size: 3rem;
+    max-width: 500px;
+  }
+  #contact h2 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 700px) {
+  #navbar ul a {
+    font-size: 1.6rem;
+  }
+  #navbar ul {
+    padding-right: 2rem;
+  }
+  #welcome-section h1 {
+    font-size: 4rem;
+  }
+  #welcome-section p {
+    font-size: 2.2rem;
+  }
+  #projects h2 {
+    font-size: 2.5rem;
+    max-width: 400px;
+  }
+  .projects-images {
+    width: 100%;
+  }
+  #contact h2 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 600px) {
+  #navbar ul a {
+    font-size: 1.4rem;
+  }
+  #navbar ul {
+    padding-right: 1.5rem;
+  }
+  #welcome-section h1 {
+    font-size: 4rem;
+  }
+  #welcome-section p {
+    font-size: 2rem;
+  }
+  #projects h2 {
+    font-size: 2rem;
+    max-width: 300px;
+  }
+  #contact h2 {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 500px) {
+  #navbar ul a {
+    font-size: 1.2rem;
+  }
+  #navbar ul {
+    padding-right: 1rem;
+  }
+  #welcome-section h1 {
+    font-size: 3rem;
+  }
+  #welcome-section p {
+    font-size: 1.7rem;
+  }
+  #projects h2 {
+    font-size: 1.5rem;
+    max-width: 200px;
+  }
+  #contact h2 {
+    font-size: 2.3rem;
+  }
+}
+@media (max-width: 400px) {
+  #navbar ul a {
+    font-size: 1rem;
+  }
+  #navbar ul {
+    padding-right: 0.5rem;
+  }
+  #welcome-section h1 {
+    font-size: 2.5rem;
+  }
+  #welcome-section p {
+    font-size: 1.5rem;
+  }
+  #projects h2 {
+    font-size: 1.3rem;
   }
  
+}
