--- a/20. Personal Portfolio 💠/style.css
+++ b/20. Personal Portfolio 💠/style.css
@@ -203,14 +203,38 @@ figure a,
     font-size: 2.4rem;
     text-shadow: #303841;
     transform: translateY(0);
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 .social-links p:hover {
-    transform: translateY(12%);
+    transform: translateY(20%);
 }
+
+/* =============================
+           FOOTER STYLING
+   =============================*/
+
+#footer {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 14vh;
+    border-top: 4px solid var(--primary-red);
+    background-color: var(--primary-gray);
+    font-size: 1.8rem;
+    color: var(--primary-white);
+    font-weight: 200;
+    padding: 0 2rem;
+}
+#footer a {
+    color: var(--primary-white);
+    text-decoration: underline;
+}
+
 /* ==========================
         RESPONSIVE STYLING
-    ==========================*/
+   ==========================*/
+
 @media (max-width: 1300px) {
   .projects-images {
     grid-template-columns: repeat(2, 1fr);
